--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Wentao Zhang"
   pronouns         : # example: "she/her"  
   bio              : "si vis pacem, para bellum"
-  location         : # "Earth"
-  employer         : "USTC"
+  location         : "Shen Zhen"
+  employer         : # "USTC"
   uri              : # URL
   email            : "zwt@mail.ustc.edu.cn"
 
