--- a/_config.yml
+++ b/_config.yml
@@ -297,18 +297,18 @@ timezone: PRC # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Plugins
 plugins:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-paginate
-  - jekyll-sitemap
+  # - jekyll-feed
+  # - jekyll-gist
+  # - jekyll-paginate
+  # - jekyll-sitemap
   - jemoji
 
 # Mimic GitHub Pages with --safe
 whitelist:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-paginate
-  - jekyll-sitemap
+  # - jekyll-feed
+  # - jekyll-gist
+  # - jekyll-paginate
+  # - jekyll-sitemap
   - jemoji
 
 
